# artguide

./: .gitignore  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.md
api/: Dockerfile  api.py  docker-compose.yml
dashboard/: .dockerignore  Dockerfile  docker-compose.yml  main.py  translations.py  utils.py
dashboard/components/: custom_expander.py  custom_spinner.py  page_configurator.py
dashboard/pages/: artguide.py  sidebar.py
src/agent/: __init__.py  artguide_agent.py  prompts.py
src/agent/tools/: api_tools.py  base_tools.py  llm_tools.py
src/etl/: base_paintings_etl.py  etl_readme.md
src/etl/implementations/: enrichement_etl.py  wikiart_etl.py
src/retrievers/: constants.py  wikiart_retriever.py  wikipedia_retriever.py
src/services/: piper_speaker.py  qdrant_db.py
tts/: download_voices.sh
