[project]
name = "artguide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "openai>=2.6.1",
    "pillow>=12.0.0",
    "piper-tts>=1.3.0",
    "qdrant-client<1.15.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
[tool.black]
line-length = 100
